package edu.fiuba.algo3.Modelo.Casillas;
import edu.fiuba.algo3.Modelo.Gladiador;

public interface Ocupable {
    Gladiador interactuarConLaOcupacion(Gladiador ungladiador);


}
