package edu.fiuba.algo3.Modelo;
import java.util.Random;

public interface Dado {
    int lanzarDado();
}