package edu.fiuba.algo3.Modelo.Dados;

public class DadoMock implements Dado {

    public int lanzarDado() {
        return 1;
    }
}
