package edu.fiuba.algo3.Modelo.Equipamientos;

public interface Equipado {
    int modificarEnergia(int unaEnergia);

}
